fix: refactor service tests