@@ -12,6 +12,7 @@ import uk.bovykina.matching_guru.entity.Course;
 import uk.bovykina.matching_guru.entity.CourseGroup;
 import uk.bovykina.matching_guru.entity.Organisation;
 import uk.bovykina.matching_guru.entity.enums.CourseType;
+import uk.bovykina.matching_guru.mapper.CourseGroupMapper;
 import uk.bovykina.matching_guru.repository.CourseGroupRepository;
 import uk.bovykina.matching_guru.repository.CourseRepository;
 import uk.bovykina.matching_guru.repository.OrganisationRepository;
@@ -33,6 +34,9 @@ class CourseGroupServiceTest {
 
     @Mock
     private OrganisationRepository organisationRepository;
+
+    @Mock
+    private CourseGroupMapper courseGroupMapper;
 
     @InjectMocks
     private CourseGroupService courseGroupService;
@@ -57,18 +61,25 @@ class CourseGroupServiceTest {
         savedGroup.setName("Test Group");
         savedGroup.setOrganisation(organisation);
 
+        CourseGroupDto expectedDto = new CourseGroupDto();
+        expectedDto.setId(1L);
+        expectedDto.setName("Test Group");
+        expectedDto.setOrganisationId(organisationId);
+
         when(organisationRepository.findById(organisationId)).thenReturn(Optional.of(organisation));
         when(courseGroupRepository.save(any(CourseGroup.class))).thenReturn(savedGroup);
+        when(courseGroupMapper.toDto(savedGroup)).thenReturn(expectedDto);
 
         CourseGroupDto result = courseGroupService.createCourseGroup(courseGroupCreateDto);
 
         assertNotNull(result);
-        assertEquals(savedGroup.getId(), result.getId());
-        assertEquals(savedGroup.getName(), result.getName());
-        assertEquals(savedGroup.getOrganisation().getId(), result.getOrganisationId());
+        assertEquals(expectedDto.getId(), result.getId());
+        assertEquals(expectedDto.getName(), result.getName());
+        assertEquals(expectedDto.getOrganisationId(), result.getOrganisationId());
 
         verify(organisationRepository).findById(organisationId);
         verify(courseGroupRepository).save(any(CourseGroup.class));
+        verify(courseGroupMapper).toDto(savedGroup);
     }
 
     @Test
@@ -90,20 +101,36 @@ class CourseGroupServiceTest {
         course.setDuration(3);
         course.setGroup(courseGroup);
 
-        when(courseGroupRepository.findByOrganisationId(organisationId)).thenReturn(Collections.singletonList(courseGroup));
-        when(courseRepository.findByGroupId(courseGroup.getId())).thenReturn(Collections.singletonList(course));
+        CourseDto courseDto = new CourseDto();
+        courseDto.setId(1L);
+        courseDto.setName("Test Course");
+        courseDto.setType(CourseType.UNDERGRAD);
+        courseDto.setDuration(3);
+
+        CourseGroupDto courseGroupDto = new CourseGroupDto();
+        courseGroupDto.setId(1L);
+        courseGroupDto.setName("Test Group");
+        courseGroupDto.setOrganisationId(organisationId);
+        courseGroupDto.setCourses(List.of(courseDto));
+
+        when(courseGroupRepository.findByOrganisationId(organisationId)).thenReturn(List.of(courseGroup));
+        when(courseRepository.findByGroupId(courseGroup.getId())).thenReturn(List.of(course));
+        when(courseGroupMapper.toDto(courseGroup)).thenReturn(courseGroupDto);
+        when(courseGroupMapper.toCourseDto(course)).thenReturn(courseDto);
 
         List<CourseGroupDto> result = courseGroupService.getCourseGroupsByOrganisationId(organisationId);
 
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals(courseGroup.getId(), result.get(0).getId());
-        assertEquals(1, result.get(0).getCourses().size());
-        assertEquals(course.getId(), result.get(0).getCourses().get(0).getId());
-        assertEquals(CourseType.UNDERGRAD, result.get(0).getCourses().get(0).getType());
+        CourseGroupDto actualDto = result.get(0);
+        assertEquals(courseGroup.getId(), actualDto.getId());
+        assertEquals("Test Group", actualDto.getName());
+        assertEquals(1, actualDto.getCourses().size());
+        assertEquals(courseDto.getId(), actualDto.getCourses().get(0).getId());
 
         verify(courseGroupRepository).findByOrganisationId(organisationId);
         verify(courseRepository).findByGroupId(courseGroup.getId());
+        verify(courseGroupMapper).toDto(courseGroup);
     }
 
     @Test
