@@ -5,22 +5,24 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.springframework.web.multipart.MultipartFile;
 import uk.bovykina.matching_guru.dto.course.CourseCreateDto;
 import uk.bovykina.matching_guru.dto.course.CourseDto;
 import uk.bovykina.matching_guru.entity.Course;
 import uk.bovykina.matching_guru.entity.CourseGroup;
+import uk.bovykina.matching_guru.entity.Organisation;
 import uk.bovykina.matching_guru.entity.Programme;
 import uk.bovykina.matching_guru.entity.enums.CourseType;
+import uk.bovykina.matching_guru.mapper.CourseMapper;
 import uk.bovykina.matching_guru.repository.CourseGroupRepository;
 import uk.bovykina.matching_guru.repository.CourseRepository;
+import uk.bovykina.matching_guru.repository.OrganisationRepository;
 import uk.bovykina.matching_guru.repository.ProgrammeRepository;
 
+import java.io.IOException;
 import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.Mockito.*;
 
 class CourseServiceTest {
@@ -37,6 +39,15 @@ class CourseServiceTest {
     @Mock
     private CourseGroupRepository courseGroupRepository;
 
+    @Mock
+    private OrganisationRepository organisationRepository;
+
+    @Mock
+    private CourseMapper courseMapper;
+
+    @Mock
+    private MultipartFile mockFile;
+
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
@@ -50,116 +61,121 @@ class CourseServiceTest {
         createDto.setDuration(3);
         createDto.setGroupId(1L);
 
-        CourseGroup mockGroup = new CourseGroup();
-        mockGroup.setId(1L);
+        CourseGroup group = new CourseGroup();
+        group.setId(1L);
 
-        when(courseGroupRepository.findById(1L)).thenReturn(Optional.of(mockGroup));
+        Course course = new Course();
+        course.setId(1L);
+        course.setName("Computer Science");
+        course.setGroup(group);
+        course.setType(CourseType.UNDERGRAD);
+        course.setDuration(3);
 
-        Course savedCourse = new Course();
-        savedCourse.setId(1L);
-        savedCourse.setName("Computer Science");
-        savedCourse.setType(CourseType.UNDERGRAD);
-        savedCourse.setDuration(3);
-        savedCourse.setGroup(mockGroup);
+        CourseDto expectedDto = new CourseDto();
+        expectedDto.setId(1L);
+        expectedDto.setName("Computer Science");
+        expectedDto.setGroupId(1L);
+        expectedDto.setType(CourseType.UNDERGRAD);
+        expectedDto.setDuration(3);
 
-        when(courseRepository.save(any(Course.class))).thenReturn(savedCourse);
+        when(courseGroupRepository.findById(1L)).thenReturn(Optional.of(group));
+        when(courseRepository.save(any(Course.class))).thenReturn(course);
+        when(courseMapper.toDto(course)).thenReturn(expectedDto);
 
         CourseDto result = courseService.createCourse(createDto);
 
         assertNotNull(result);
-        assertEquals(1L, result.getId());
-        assertEquals("Computer Science", result.getName());
-        assertEquals(CourseType.UNDERGRAD, result.getType());
-        assertEquals(3, result.getDuration());
-        assertEquals(1L, result.getGroupId());
-
-        verify(courseGroupRepository).findById(1L);
+        assertEquals(expectedDto.getId(), result.getId());
         verify(courseRepository).save(any(Course.class));
     }
 
     @Test
     void testGetCoursesByGroupId() {
-        Long groupId = 1L;
-
-        CourseGroup mockGroup = new CourseGroup();
-        mockGroup.setId(groupId);
+        CourseGroup group = new CourseGroup();
+        group.setId(1L);
 
         Course course1 = new Course();
         course1.setId(1L);
         course1.setName("Course 1");
-        course1.setType(CourseType.UNDERGRAD);
-        course1.setDuration(3);
-        course1.setGroup(mockGroup);
+        course1.setGroup(group);
 
         Course course2 = new Course();
         course2.setId(2L);
         course2.setName("Course 2");
-        course2.setType(CourseType.POSTGRAD);
-        course2.setDuration(1);
-        course2.setGroup(mockGroup);
+        course2.setGroup(group);
 
-        when(courseRepository.findByGroupId(groupId)).thenReturn(List.of(course1, course2));
+        when(courseRepository.findByGroupId(1L)).thenReturn(List.of(course1, course2));
 
-        List<CourseDto> result = courseService.getCoursesByGroupId(groupId);
+        CourseDto dto1 = new CourseDto();
+        dto1.setId(1L);
+        dto1.setName("Course 1");
 
-        assertNotNull(result);
+        CourseDto dto2 = new CourseDto();
+        dto2.setId(2L);
+        dto2.setName("Course 2");
+
+        when(courseMapper.toDto(course1)).thenReturn(dto1);
+        when(courseMapper.toDto(course2)).thenReturn(dto2);
+
+        List<CourseDto> result = courseService.getCoursesByGroupId(1L);
+
         assertEquals(2, result.size());
         assertEquals("Course 1", result.get(0).getName());
-        assertEquals("Course 2", result.get(1).getName());
-
-        verify(courseRepository).findByGroupId(groupId);
     }
 
     @Test
     void testGetEligibleCoursesByProgrammeId() {
-        Long programmeId = 1L;
+        Programme programme = new Programme();
+        programme.setId(1L);
 
-        Programme mockProgramme = new Programme();
-        mockProgramme.setId(programmeId);
-
-        CourseGroup mockGroup1 = new CourseGroup();
-        mockGroup1.setId(1L);
-
-        CourseGroup mockGroup2 = new CourseGroup();
-        mockGroup2.setId(2L);
-
-        Set<CourseGroup> eligibleGroups = new HashSet<>(Set.of(mockGroup1, mockGroup2));
-        mockProgramme.setEligibleCourseGroups(eligibleGroups);
+        CourseGroup group1 = new CourseGroup();
+        group1.setId(1L);
+        CourseGroup group2 = new CourseGroup();
+        group2.setId(2L);
+        programme.setEligibleCourseGroups(new HashSet<>(Set.of(group1, group2)));
 
         Course course1 = new Course();
         course1.setId(1L);
-        course1.setName("Course 1");
-        course1.setType(CourseType.UNDERGRAD);
-        course1.setDuration(3);
-        course1.setGroup(mockGroup1);
+        course1.setGroup(group1);
+        course1.setName("Course A");
 
         Course course2 = new Course();
         course2.setId(2L);
-        course2.setName("Course 2");
-        course2.setType(CourseType.POSTGRAD);
-        course2.setDuration(1);
-        course2.setGroup(mockGroup2);
+        course2.setGroup(group2);
+        course2.setName("Course B");
 
-        when(programmeRepository.findById(programmeId)).thenReturn(Optional.of(mockProgramme));
-        when(courseRepository.findByGroupIds(argThat(ids ->
-                ids.contains(1L) && ids.contains(2L) && ids.size() == 2
-        ))).thenReturn(Arrays.asList(course1, course2));
+        when(programmeRepository.findById(1L)).thenReturn(Optional.of(programme));
+        when(courseRepository.findByGroupIds(anyList())).thenReturn(List.of(course1, course2));
 
-        List<CourseDto> result = courseService.getEligibleCoursesByProgrammeId(programmeId);
+        CourseDto dto1 = new CourseDto();
+        dto1.setId(1L);
+        dto1.setName("Course A");
+        CourseDto dto2 = new CourseDto();
+        dto2.setId(2L);
+        dto2.setName("Course B");
 
-        assertNotNull(result);
-        assertEquals(2, result.size(), "There should be 2 eligible courses");
-        assertEquals("Course 1", result.get(0).getName());
-        assertEquals("Course 2", result.get(1).getName());
+        when(courseMapper.toDto(course1)).thenReturn(dto1);
+        when(courseMapper.toDto(course2)).thenReturn(dto2);
 
-        verify(programmeRepository).findById(programmeId);
-        verify(courseRepository).findByGroupIds(anyList());
+        List<CourseDto> result = courseService.getEligibleCoursesByProgrammeId(1L);
+
+        assertEquals(2, result.size());
     }
 
     @Test
     void testDeleteCourse() {
-        Long courseId = 1L;
-        courseService.deleteCourse(courseId);
-        verify(courseRepository).deleteById(courseId);
+        courseService.deleteCourse(1L);
+        verify(courseRepository).deleteById(1L);
+    }
+
+    @Test
+    void testProcessFile_UnsupportedFormat() {
+        when(mockFile.getOriginalFilename()).thenReturn("file.txt");
+
+        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
+            courseService.processFile(mockFile, 1L);
+        });
+
+        assertEquals("Unsupported file type", exception.getMessage());
     }
 }
